semantic osvos added, fixed pub order

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -35,6 +35,43 @@ K.-K. Maninis, S. Caelles, Y. Chen, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Crem
 
 </table>
 
+<!-- Item: walchiccv2017 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
+<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
+<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
+
+
+2017.
+<br />
+
+<a href="javascript:toggleBibtex('walchiccv2017')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1611.07890">[PDF]</a> 
+</p>
+
+<div id="bib_walchiccv2017" class="bibtex noshow">
+<pre>
+@article{walchiccv2017,
+  author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
+  title = {Image-based localization using LSTMs for structured feature correlation},
+  journal = {IEEE International Conference on Computer Vision (ICCV)},
+  year = {2017}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
 <!-- Item: henschel:arxiv:2017 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -183,43 +220,6 @@ S. Caelles, K.-K. Maninis, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L
 
 </table>
 
-<!-- Item: walchiccv2017 -->
-<!-- <li >-->
-<table style="width:100%">
-<tr>
-<td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/WalHazLeaSatHilCreICCV2017.png" width="100px" height="100px">
-</td>
-<td>
-<p>
-F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
-<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
-<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
-
-
-2017.
-<br />
-
-<a href="javascript:toggleBibtex('walchiccv2017')">[BibTeX]</a>
-
-<a href="https://arxiv.org/abs/1611.07890">[PDF]</a> 
-</p>
-
-<div id="bib_walchiccv2017" class="bibtex noshow">
-<pre>
-@article{walchiccv2017,
-  author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
-  title = {Image-based localization using LSTMs for structured feature correlation},
-  journal = {IEEE International Conference on Computer Vision (ICCV)},
-  year = {2017}
-}
-</pre>
-</div>
-</td>
-</tr>
-
-</table>
-
 <!-- Item: henschelarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -231,7 +231,7 @@ F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cr
 <p>
 R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 <strong>Tracking with multi-level features</strong><br />
-<i>arXiv:1607.07304 [Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)]</i>, 
+<i>arXiv:1607.07304</i>, 
 
 
 2016.
@@ -247,7 +247,7 @@ R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 @article{henschelarxiv2016,
   author = {R. Henschel and L. Leal-Taix&eacute; and B. Rosenhahn and K. Schindler},
   title = {Tracking with multi-level features},
-  journal = {arXiv:1607.07304 [Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)]},
+  journal = {arXiv:1607.07304},
   year = {2016}
 }
 </pre>
