admm transductive paper

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -1,3 +1,40 @@
+<!-- Item: laudearxiv2017 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/LauLanSchDomLeaSchAndCreArxiv2017.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+Emanuel Laude, Jan-Hendrik Lange, Jonas Sch&uuml;pfer, Csaba Domokos, L. Leal-Taix&eacute;, Frank R. Schmidt, Bjoern Andres and Daniel Cremers<br />
+<strong>Discrete-Continuous ADMM for Transductive Inference in Higher-Order MRFs</strong><br />
+<i>arxiv:1705.05020</i>, 
+
+
+2017.
+<br />
+
+<a href="javascript:toggleBibtex('laudearxiv2017')">[BibTeX]</a>
+
+<a href="https://arxiv.org/abs/1705.05020">[PDF]</a> 
+</p>
+
+<div id="bib_laudearxiv2017" class="bibtex noshow">
+<pre>
+@article{laudearxiv2017,
+  author = {Emanuel Laude and Jan-Hendrik Lange and Jonas Sch&uuml;pfer and Csaba Domokos and L. Leal-Taix&eacute;  and Frank R. Schmidt and Bjoern Andres and Daniel Cremers},
+  title = {Discrete-Continuous ADMM for Transductive Inference in Higher-Order MRFs},
+  journal = {arxiv:1705.05020},
+  year = {2017}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
+
 <!-- Item: maninisarxiv2017 -->
 <!-- <li >-->
 <table style="width:100%">
